<resources>
    <string name="app_name">Cibertec App</string>

    <!-- Login -->
    <string name="edt_email">Correo</string>
    <string name="edt_pass">Clave</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_register">REGISTRAR</string>

    <!-- Register -->
    <string name="edt_name">Nombre</string>
    <string name="edt_lastname">Apellidos</string>
    <string name="edt_repeat_pass">Repetir Clave</string>

    <!-- Welcome -->
    <string name="text_welcome">Bienvenido</string>

    <string name="text_android">Curso de Android</string>

</resources>